[WFNC-86] Remove deprecated InitialContext